disable new tab when we're already creating a new tab

--- a/HotdAmn/en.lproj/MainMenu.xib
+++ b/HotdAmn/en.lproj/MainMenu.xib
@@ -198,7 +198,7 @@
 								<bool key="EncodedWithXMLCoder">YES</bool>
 								<object class="NSMenuItem" id="294629803">
 									<reference key="NSMenu" ref="720053764"/>
-									<string key="NSTitle">New Room</string>
+									<string key="NSTitle">Join Room...</string>
 									<string key="NSKeyEquiv">t</string>
 									<int key="NSKeyEquivModMask">1048576</int>
 									<int key="NSMnemonicLoc">2147483647</int>
