--- a/HotdAmn/en.lproj/MainMenu.xib
+++ b/HotdAmn/en.lproj/MainMenu.xib
@@ -1267,7 +1267,7 @@
 				<string key="NSClassName">HotDamn</string>
 			</object>
 			<object class="NSCustomObject" id="118086158">
-				<string key="NSClassName">HDTabBarController</string>
+				<string key="NSClassName">TabBar</string>
 			</object>
 			<object class="NSToolbarItem" id="585347951">
 				<string key="NSToolbarItemIdentifier">NSToolbarCustomizeToolbarItem</string>
@@ -3282,25 +3282,6 @@
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<object class="IBPartialClassDescription">
-					<string key="className">HDTabBarController</string>
-					<string key="superclassName">NSViewController</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">tabView</string>
-						<string key="NS.object.0">HDTabBarView</string>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">tabView</string>
-						<object class="IBToOneOutletInfo" key="NS.object.0">
-							<string key="name">tabView</string>
-							<string key="candidateClassName">HDTabBarView</string>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/HDTabBarController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
 					<string key="className">HDTabBarView</string>
 					<string key="superclassName">NSView</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
@@ -3368,7 +3349,7 @@
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>NSMenu</string>
-							<string>HDTabBarController</string>
+							<string>TabBar</string>
 							<string>NSWindow</string>
 						</object>
 					</object>
@@ -3388,7 +3369,7 @@
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">barControl</string>
-								<string key="candidateClassName">HDTabBarController</string>
+								<string key="candidateClassName">TabBar</string>
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">window</string>
@@ -3399,6 +3380,25 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/HotDamn.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">TabBar</string>
+					<string key="superclassName">NSViewController</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">tabView</string>
+						<string key="NS.object.0">HDTabBarView</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">tabView</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
+							<string key="name">tabView</string>
+							<string key="candidateClassName">HDTabBarView</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/TabBar.h</string>
 					</object>
 				</object>
 			</object>
